--- a/src/components/ProjectGallery/ProjectGallery.css
+++ b/src/components/ProjectGallery/ProjectGallery.css
@@ -1,11 +1,16 @@
 .gallery-tab-container {
-  padding: 1rem;
+  padding: 0.5rem;
+  display: flex;
+  justify-content: center;
 }
 
-.gallery-container {
-  padding: 50px;
+.gallery-tab-wrapper {
+  display: flex;
+  justify-content: space-evenly;
 }
 
-.tab-item {
-  font-size: 24px;
+.project-container {
+  padding: 30px;
+  display: flex;
+  justify-content: space-evenly;
 }
