--- a/src/components/MainSection/MainSection.css
+++ b/src/components/MainSection/MainSection.css
@@ -7,6 +7,7 @@ video {
 }
 
 .main-container {
+  /* background-image: url("../../assets/keyboard.jpg"); */
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
