--- a/src/components/PageSections/Sections.css
+++ b/src/components/PageSections/Sections.css
@@ -19,6 +19,12 @@
 .profile-picture {
   max-width: 40%;
 }
+.resume-container {
+  background-color: #ececec;
+  padding: 100px 0 0 0;
+  display: flex;
+  justify-content: center;
+}
 
 @media screen and (max-width: 960px) {
   .section-container {
