--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -134,14 +134,17 @@
 }
 
 @media screen and(max-width: 820px) {
+  .footer-container {
+    color: hotpink;
+  }
   .footer-links {
-    padding-top: 2rem;
+    padding-top: 1rem;
   }
   .footer-input {
-    width: 100%;
+    width: 80%;
   }
   .btn {
-    width: 100%;
+    width: 80%;
   }
   .footer-link-wrapper {
     flex-direction: column;
