--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,14 @@
   margin: 0;
   padding: 0;
   font-family: "Heebo", sans-serif;
-  /* overflow: auto;
-  z-index: -1; */
+}
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 .home,
@@ -59,9 +65,9 @@
 @media screen and (max-width: 960px) {
   .home,
   .about,
-  .shop,
+  .projects,
   .contact,
-  .collections {
+  .resume {
     display: flex;
     height: 100vh;
     align-items: center;
@@ -73,9 +79,9 @@
 @media screen and (max-width: 786px) {
   .home,
   .about,
-  .shop,
+  .projects,
   .contact,
-  .collections {
+  .resume {
     display: flex;
     height: 80vh;
     width: auto;
