--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -80,14 +80,6 @@
   transition: 0.3 ease-out;
 }
 
-.footer-email-form h2 {
-  margin-bottom: 32px;
-}
-
-.footer-input::placeholder {
-  color: #b1b1b1;
-}
-
 /* Social Icons */
 
 .social-icon-link {
@@ -133,23 +125,21 @@
   margin-bottom: 16px;
 }
 
-@media screen and(max-width: 820px) {
-  .footer-container {
-    width: auto;
-  }
-  .footer-links {
-    padding-top: 1rem;
-    align-items: center;
-  }
-
-  .footer-link-wrapper {
-    flex-direction: row;
-  }
-  .social-icon-wrap {
+@media screen and (max-width: 687px) {
+  .footer-link-items {
+    display: block;
     flex-direction: column;
+    align-items: center;
+    margin: 8px;
+    text-align: center;
+    width: 50%;
   }
-  .social-logo {
+  .footer-logo {
+    width: 100%;
+  }
+  .website-rights {
     display: flex;
-    font-size: 18px;
+    text-align: center;
+    align-items: center;
   }
 }
