updated aboutsection css

--- a/src/components/PageSections/Sections.css
+++ b/src/components/PageSections/Sections.css
@@ -16,6 +16,10 @@
   margin: 75px 0 75px 0;
 }
 
+.about-wrapper {
+  padding: 0 40px;
+}
+
 .profile-container {
   display: flex;
   justify-content: center;
